# hs_bball_players_mcp

./: .autoactivate.ps1  .env.example  .env.example_frontend  .gitignore  COVERAGE_ANALYSIS.md  COVERAGE_ENHANCEMENT_PLAN.md  DATASOURCE_IMPLEMENTATION_GUIDE.md  DATASOURCE_ROADMAP.md  DATASOURCE_VALIDATION_REPORT.md  ENHANCEMENT_10_SUMMARY.md  GOBOUND_MULTI_STATE_VALIDATION.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_ROADMAP.md  IMPORT_ERROR_FIX.md  MERGE_SUMMARY_2025-11-14.md  NEXT_STEPS.md  NEXT_STEPS_PRIORITY_1.md  PHASE_12_VERIFICATION.md  PHASE_13_EXECUTION_GUIDE.md  PHASE_13_SUMMARY.md  PHASE_14_URL_DISCOVERY_GUIDE.md  PROJECT_LOG.md  PROJECT_LOG_frontend_template.md  QUICKSTART.md  README.md  SESSION_SUMMARY_2025-11-14.md  WIAA_DEBUGGING_SESSION_SUMMARY.md  WIAA_FIXTURE_WORKFLOW.md  WISCONSIN_404_DEBUG.md  WISCONSIN_BACKFILL_GUIDE.md  WISCONSIN_UPDATE_GUIDE.md  WISCONSIN_URL_OVERRIDE_CHANGES.md  WISCONSIN_URL_OVERRIDE_PLAN.md  WISCONSIN_URL_OVERRIDE_WORKFLOW.md  activate.ps1  activate.sh  datasource_audit_results.json  pyproject.toml  pytest.ini  requirements.txt  (+4 more)
.claude/: settings.local.json
config/: datasource_status.yaml  datasource_test_cases.yaml  hs_player_season_schema.yaml  leagues.yaml  sources.yaml  sources_phase14_additions.yaml
data/: college_cohort_d1_2018_2020.csv  college_cohort_example.csv  datasource_health_history.json  state_gaps.csv
docs/: COVERAGE_WORKFLOW.md  DATASOURCE_INVENTORY.md  DATA_ENHANCEMENT_PLAN.md  DATA_METRICS_AUDIT.md  ENHANCEMENT_2_IMPLEMENTATION_PLAN.md  ENHANCEMENT_4_IMPLEMENTATION_PLAN.md  ENHANCEMENT_5_IMPLEMENTATION_PLAN.md  ENHANCEMENT_6_IMPLEMENTATION_PLAN.md  FIBA_API_RESEARCH.md  FIXTURE_AUTOMATION_GUIDE.md  FORECASTING_GUIDE.md  MAXPREPS_VALIDATION_GUIDE.md  QUICKSTART.md  REMAINING_WORK.md  SBLIVE_EXPANSION_PLAN.md  STATE_HEALTH_WISCONSIN.md  TEMPLATE_ADAPTER_ACTIVATION.md  WIAA_DATA_REQUEST_TEMPLATE.md  WISCONSIN_FIXTURE_GUIDE.md
schemas/: on3_player_rankings_raw.yaml  player_recruiting.yaml  recruiting_coverage.yaml
scripts/: EYBL_PLAYER_EXTRACTION_GUIDE.md  OSBA_INVESTIGATION_GUIDE.md  Process-Fixtures.ps1  README.md  SCAFFOLDER_README.md  WISCONSIN_PARSER_ENHANCED.py  (+170 more)
(+290 files in other folders)
